--- a/package.json
+++ b/package.json
@@ -17,14 +17,20 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@eslint/js": "^9.20.0",
     "@types/node": "^22.13.9",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.20.1",
     "eslint-plugin-vue": "^9.32.0",
     "prettier": "^3.5.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
     "typescript": "^5.8.2",
+    "util": "^0.12.5",
     "vite": "^6.1.0",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
